# arecanut_rnn

./: app.py  arecanut.csv  index.html  model_adike.h5  model_adike.keras  model_patora.h5  model_patora.keras  pyproject.toml  readme.md  requirements.txt  rnn_adike.ipynb  rnn_adike.py  rnn_patora.ipynb  rnn_patora.py
arecanut_price_predictor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
