[project]
name = "arecanut-price-predictor"
version = "1.0.0"
description = "RNN-based price prediction for Arecanut"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "pandas>=2.0.0",
    "numpy>=1.23.5,<2.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "tensorflow-macos==2.16.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorflow==2.16.2; platform_system != 'Darwin'",
    "tensorflow-metal==1.2.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "joblib>=1.3.0",
]

[project.scripts]
run-server = "app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100